<resources>
    <string name="app_name">Blood Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="blood_group">Blood Group</string>
    <string name="area">Area</string>
    <string name="search">Search</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="no_of_times">No of times donated</string>
    <string name="donation_status">Donation Status</string>


    <string-array name="area_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="blood_group_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="title_activity_donor_list">DonorListActivity</string>
</resources>
