<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:clickable="false">

    <TextView
        android:text="@string/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/button_dimen"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30dp"
        android:typeface="monospace"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold|italic"
            android:textSize="17dp" />
        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/email"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/phone"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />
        <EditText
            android:id="@+id/etPhone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/age"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />
        <EditText
            android:id="@+id/etAge"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:text="@string/area"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />
        <Spinner
            android:id="@+id/spnArea"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:theme="@style/Base.AlertDialog.AppCompat.Light"
            android:clickable="false"
            android:dropDownSelector="@android:color/holo_red_dark"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/blood_group"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17dp"
            android:textStyle="bold|italic" />
        <Spinner
            android:layout_gravity="center"
            android:id="@+id/spnBloodGroup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:theme="@style/Base.TextAppearance.AppCompat"
            android:dropDownSelector="@android:color/holo_red_dark"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:text="@string/no_of_times"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15dp"
            android:textStyle="bold|italic" />
        <EditText
            android:layout_gravity="center"
            android:id="@+id/etNoOfTimesDonated"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp">
        <TextView
            android:text="@string/donation_status"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15dp"
            android:textStyle="bold|italic" />
        <Switch
            android:layout_gravity="center"
            android:id="@+id/swDonationStatus"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:checked="true"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:paddingEnd="150dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_dimen"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffff"
        android:textStyle="italic"
        android:typeface="monospace"
        android:textSize="15dp" />

</LinearLayout>
